<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/restricted"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/ll_program"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_locked"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_program_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxxx xxx"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/restricted_tips"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/bt_select_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_edit_rounded"
            android:drawableRight="@drawable/ic_arrow_drop_down_grey600_24dp"
            android:text="New Button" />

        <EditText
            android:id="@+id/et_passport"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_edit_rounded"
            android:hint="@string/enter_passport"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_nowid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:padding="5dp"
            android:text="@string/now_id_tips"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_edit_rounded"

            android:hint="@string/input_pw"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/cb_confirm_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:button="@drawable/ic_parental_check_selector"
            android:checked="false"
            android:hint="@string/parental_confirm"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textColorHint="@color/white" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/confirm_submit_tips"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/bbuton_parental_rounded"
            android:text="@string/submit" />


    </LinearLayout>
</ScrollView>