<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/connect_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/connect"
        android:textColor="@color/ios_blue" />

    <include layout="@layout/view_norma_divide" />

    <TextView
        android:id="@+id/disconnect_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/disconnect_device"
        android:textColor="@color/ios_blue" />

    <include layout="@layout/view_norma_divide" />

    <TextView
        android:id="@+id/rename_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/rename_device"
        android:textColor="@color/ios_blue" />

    <include layout="@layout/view_norma_divide" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/cancel"
        android:textColor="@color/ios_blue" />
</LinearLayout>