<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColorDark"
    android:clickable="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:text="@string/offline_mode"
        android:textColor="@color/orange"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:drawablePadding="38dp"
        android:drawableTop="@drawable/ic_no_wifi"
        android:gravity="center"
        android:text="@string/offline_hint" />

    <Button
        android:id="@+id/go_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/white_round_click_bg"
        android:gravity="center"
        android:text="@string/go_online" />
</LinearLayout>